[gd_scene load_steps=2 format=3 uid="uid://kbgjirn72nlu"]

[ext_resource type="Script" path="res://Scenes/PauseMenu/PauseMenu.gd" id="1_fougu"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fougu")

[node name="Button" type="Button" parent="."]
process_mode = 3
offset_left = 288.0
offset_top = 184.0
offset_right = 864.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="Label" type="Label" parent="."]
offset_left = 288.0
offset_top = 8.0
offset_right = 864.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 50
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main Menu" type="Button" parent="."]
offset_left = 288.0
offset_top = 496.0
offset_right = 864.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 20
text = "Return to main screen"

[node name="Restart Level" type="Button" parent="."]
offset_left = 288.0
offset_top = 344.0
offset_right = 864.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 20
text = "Restart Level"

[connection signal="pressed" from="Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_main_screen_pressed"]
[connection signal="pressed" from="Restart Level" to="." method="_on_restart_level_pressed"]
